# gomaju

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  alarm-toast.html  alarms.html  breaks.html  chimes.html  confirm.html  index.html  overlay.html  package-lock.json  package.json  pause-toast.html  rules.html  stopwatch.html  timer-toast.html  timers.html  toast.html  vite.config.ts  簡短README.txt
.github/workflows/: release.yml
crates/gomaju-core/: Cargo.toml  default_chimes.toml  default_config.toml  default_quotes.toml
crates/gomaju-core/src/: alarm.rs  chime.rs  config.rs  countdown.rs  engine.rs  lib.rs  progress.rs  quotes.rs  rule.rs
crates/restee-core/: Cargo.toml  default_chimes.toml  default_config.toml  default_quotes.toml
crates/restee-core/src/: alarm.rs  chime.rs  config.rs  engine.rs  lib.rs  progress.rs  quotes.rs  rule.rs  settings.rs
docs/: fix-plan.md
docs/screenshots/: README.md
docs/superpowers/plans/: 2026-06-05-quotes-toml-storage.md  2026-06-15-timer-auto-name-and-count-up.md  2026-06-15-timer-finish-toast.md  2026-06-15-timer-toast-progress.md  2026-06-16-alarm-toast.md
docs/superpowers/specs/: 2026-06-03-unsaved-changes-guard-design.md  2026-06-04-settings-quotes-card-design.md  2026-06-05-chime-preview-buttons-design.md  2026-06-05-quotes-toml-storage-design.md  2026-06-15-timer-auto-name-design.md  2026-06-15-timer-finish-toast-design.md  2026-06-15-timer-toast-progress-design.md  2026-06-16-alarm-toast-design.md
scripts/: version.mjs
src/: alarm-toast.ts  alarms.ts  breaks.ts  chime-preview.ts  chimes.ts  confirm-save.ts  confirm.ts  i18n.ts  locale-reload.ts  main.ts  notes.ts  overlay.ts  pause-toast.ts  quotes-editor.ts  rule-editor.ts  rules.ts  status.ts  stopwatch.ts  styles.css  timer-toast.ts  timers.ts  toast.ts  unsaved-guard.ts  util.ts
src-tauri/: Cargo.toml  default_quotes.en.txt  default_quotes.zh-Hant.txt  tauri.conf.json
src-tauri/capabilities/: README.md  alarms.json  breaks.json  chimes.json  overlay.json  rules.json  settings.json  stopwatch.json  timers.json
src-tauri/icons/: icon.icns
src-tauri/src/: alarm.rs  alarm_toast.rs  alarms_window.rs  app_state.rs  audio.rs  autostart.rs  breaks_window.rs  chimes_window.rs  commands.rs  confirm.rs  countdown.rs  hotkeys.rs  i18n.rs  idle.rs  lib.rs  logging.rs  main.rs  migrate.rs  overlay.rs  pause_toast.rs  quotes.rs  rules_window.rs  runtime.rs  settings_window.rs  stopwatch_window.rs  timer_toast.rs  timers_window.rs  toast.rs  tray.rs  webview.rs
