[workspace]
members = ["src-tauri", "crates/gomaju-core"]
resolver = "2"

[profile.dev]
# Keep line-table backtraces but drop full debug symbols. Debug builds of a Tauri-sized
# dependency tree (esp. the `windows` crate + our `staticlib`) otherwise bloat `target/`
# to ~19 GB; this cuts it to a fraction with no loss of backtraces.
debug = "line-tables-only"

# NOTE: no custom [profile.release] — Cargo's defaults (opt-level=3, lto=false,
# codegen-units=16, no strip) are used deliberately for faster release compiles. A
# size-optimized profile (opt-level="s" + lto + codegen-units=1 + strip) cut the Windows
# binary ~33% (12.1 → 8.2 MB) but made release builds much slower (LTO + single codegen
# unit); we trade that smaller binary back for build speed. Re-add the block if size matters.
