[package]
name = "restee"
version = "0.1.0"
description = "restee — a cross-platform break reminder for engineers"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "restee_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
restee-core = { path = "../crates/restee-core" }
user-idle = "0.6"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
rodio = "0.19"
# Wall-clock + local timezone + weekday/month math for clock alarms (the engine is
# clock-free; alarm scheduling lives in this layer). Already transitive in Cargo.lock.
chrono = "0.4"

# Windows-only: drive the WinRT toast directly for the startup notification so we
# can dismiss it after ~2s. tauri-plugin-notification exposes no control over toast
# lifetime, and a native Windows banner can't be shown for less than the OS minimum.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Data_Xml_Dom", "UI_Notifications"] }

[features]
# DO NOT REMOVE. Enables loading the embedded frontend (tauri:// protocol) in
# production builds. `tauri dev`/`tauri build` toggle this automatically, but a
# plain `cargo build` does NOT — without it the app loads from the dev server
# (devUrl) and shows ERR_CONNECTION_REFUSED when no Vite server is running.
# Build a runnable production binary with: cargo build --release --features custom-protocol
custom-protocol = ["tauri/custom-protocol"]
